# itmo_megaschool

./: README.md  pyproject.toml
itmo_denoise/: backend.py  dataset.py  inference.py  model.py  train.py
itmo_denoise/static/: main.html  style.css
